added new html file

--- a/HTML_Project/index.html
+++ b/HTML_Project/index.html
@@ -1,2 +1,4 @@
 <h1>Welcome to my our super website</h1>
 <h1>Ich hab jz schon mehr gemacht als du</h1>
+
+<a href="pesenhofer.html">go to better Website</a>
